# device-inventory-fastapi

./: .env.example  .gitignore  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
docs/: README.md
docs/explanation/: auth-design.md  data-collection-model.md  security-headers.md  why-fastapi-monolith.md
docs/how-to/: add-printer-discovery.md  build-macos-tool.md  build-windows-tool.md  configure-webdav.md  customize-pdf-export.md  deploy-systemd.md
docs/reference/: api-endpoints.md  architecture.md  cli-tools.md  database-schema.md  env-vars.md
docs/tutorial/: 01-quickstart.md
scripts/: import_printers.py  import_sysinfo.py
setup/: setup.sh
setup/nginx/: inventory.example.com.conf.example
setup/systemd/: device-inventory-import-printers.service  device-inventory-import-printers.timer  device-inventory-import.service  device-inventory-import.timer  device-inventory.service
src/: app.py
static/: components.css  print.css  style.css  tables.css
static/js/: ctr.js  device.js  services.js
static/pages/: login.css  printers.css  services.css
sysinfo/linux/: collect-sysinfo.py
sysinfo/mac/: DeviceCollector.spec  README.md  RUN.command  SIGNING-RUNBOOK.md  collect-sysinfo.py  (+1 more)
templates/: base.html  ctr.html  dashboard.html  device.html  error.html  import_log.html  index.html  login.html  printer_detail.html  printers.html  services.html  vpn.html
tests/: conftest.py  test_auth.py  test_health.py  test_security_headers.py
(+5 files in other folders)
